# mango

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
src/: Cam.ixx  Color.ixx  Config.ixx  Core.ixx  Input.ixx  Mango.ixx  Math.ixx  Schedule.ixx  Screen.ixx  Text.ixx
